Fixed top and left cursor type in icropper.css

--- a/icropper.css
+++ b/icropper.css
@@ -1,4 +1,3 @@
-
 .icropper {
 	position: relative;
 }
@@ -31,13 +30,13 @@
 	z-index: 10;
 }
 .icropper .archor-lt 	{	cursor: nw-resize; left:-4px; top: -4px;}
-.icropper .archor-t 	{ 	cursor: s-resize; top: -4px; }
+.icropper .archor-t 	{ 	cursor: n-resize; top: -4px; }
 .icropper .archor-rt 	{	cursor: ne-resize; right: -4px; top: -4px;}
 .icropper .archor-r 	{	cursor: e-resize; right: -4px;}
 .icropper .archor-rb 	{	cursor: se-resize; right: -4px; bottom: -4px;}
 .icropper .archor-b 	{	cursor: s-resize; bottom: -4px;}
 .icropper .archor-lb 	{	cursor: sw-resize; left: -4px; bottom: -4px;}
-.icropper .archor-l 	{	cursor: e-resize; left: -4px;}
+.icropper .archor-l 	{	cursor: w-resize; left: -4px;}
 
 .icropper .block    {    
 	position: absolute; 
